--- a/taskmgr.html
+++ b/taskmgr.html
@@ -122,13 +122,14 @@
             width: 100%;
             height: 100%;
             background-color: black;
-            z-index: 9999;
+            z-index: 9998; /* Lower than iframe */
             opacity: 0.9;
             color: white;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 30px;
+            pointer-events: none; /* Allow clicks through when not active */
         }
         #blackout h1 {
             text-align: center;
@@ -162,7 +163,7 @@
             background-color: #444;
         }
         iframe {
-            display: none;
+            display: none; /* Hidden by default */
             position: fixed;
             top: 50%;
             left: 50%;
@@ -171,7 +172,7 @@
             height: 60%;
             border: 2px solid gray;
             background-color: white;
-            z-index: 1000;
+            z-index: 9999; /* Higher z-index to show above other elements */
         }
     </style>
 </head>
